--- a/style.css
+++ b/style.css
@@ -1,41 +1,47 @@
 body {
     text-align: center;
+    background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/basketball-pattern-college-mascot-designs.jpg");
+    background-size:100%
 }
 #basketball-header {
     display: flex;
     justify-content: center;
     background-image: linear-gradient(to bottom right, yellow, orange);
-    opacity: .8;
-    height: 7rem;
+    height: 8rem;
   }
 #basketball-header img {
-    height: 8rem;
+    height: 7rem;
     width: auto;
   }
-.container {
+.search-team {
     display: block;
     text-align: center;
-    max-width: 500px;
+    max-width: 200px;
     margin: 0 auto;
     border: 1px solid gray;
     border-radius: 5px;
-    background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/basketball-pattern-college-mascot-designs.jpg");
-    background-size:contain
+    background-color: white;
 }
 .card {
   text-align: center;
-  background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/basketball-pattern-college-mascot-designs.jpg");
+  background-image: url("https://t4.ftcdn.net/jpg/03/08/45/23/360_F_308452357_MfTIZOjhzi2RagGF4bjSMHZwp5OZ0n3C.jpg");
   background-size:contain;
   width: 300px;
   height: 200px;
   perspective: 1000px;
   display: inline-grid;
-  overflow:hidden;
-  border-radius: 8px;
+  overflow: hidden;
+  border-style: solid;
+  border-width: 4px 4px 4px 4px;
+  border-color: black;
+  border-raidus: .3rem;
 
 }
 .logo{
   justify-self: center;
   height: 8rem;
   width: auto;
+}
+h1{
+  background-color: white;
 }
