follows the functions and 3 event listeners correctly

--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 body {
     text-align: center;
     background-image: url("https://images.fineartamerica.com/images/artworkimages/mediumlarge/3/basketball-pattern-college-mascot-designs.jpg");
-    background-size:100%
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #basketball-header {
     display: flex;
     justify-content: center;
     background-image: linear-gradient(to bottom right, yellow, orange);
-    height: 8rem;
+    height: 100%;
+    width: 100%;
   }
 #basketball-header img {
     height: 7rem;
@@ -22,26 +24,27 @@ body {
     border-radius: 5px;
     background-color: white;
 }
-.card {
+.card{
   text-align: center;
   background-image: url("https://t4.ftcdn.net/jpg/03/08/45/23/360_F_308452357_MfTIZOjhzi2RagGF4bjSMHZwp5OZ0n3C.jpg");
   background-size:contain;
-  width: 300px;
-  height: 200px;
+  width: 600px;
+  height: 400px;
   perspective: 1000px;
   display: inline-grid;
   overflow: hidden;
   border-style: solid;
   border-width: 4px 4px 4px 4px;
   border-color: black;
-  border-raidus: .3rem;
-
+  border-radius: .3rem;
+  line-height: .02;
+  position:relative;
+}
+.card:hover{
+  transform: scale(1.1);
 }
 .logo{
   justify-self: center;
-  height: 8rem;
+  height: 18rem;
   width: auto;
-}
-h1{
-  background-color: white;
 }
